--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="images/favicon.png" type="image/png" />
     <title>Expensify</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
 
   <body>
